New minor patch to better manage threads and trace logs for Service Bus